updated to the use of YARP >= 3.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,17 @@
 # requires minimum cmake version
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.5)
 
 # produce the cmake var PROJECT_NAME
-project(tutorial_cartesian-interface)
+project(assignment_producer-consumer)
 
 # mandatory use of these packages
 find_package(YARP REQUIRED)
 find_package(ICUBcontrib REQUIRED)
 
 # extend the current search path used by cmake to load helpers
-list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
 list(APPEND CMAKE_MODULE_PATH ${ICUBCONTRIB_MODULE_PATH})
 
-# helpers defining certain macros (e.g. "yarp_install")
-include(YarpInstallationHelpers)
+# helpers defining certain macros
 include(ICUBcontribHelpers)
 include(ICUBcontribOptions)
 
@@ -21,19 +19,14 @@ include(ICUBcontribOptions)
 icubcontrib_set_default_prefix()
 
 # import math symbols from standard cmath
-#add_definitions(-D_USE_MATH_DEFINES)
+add_definitions(-D_USE_MATH_DEFINES)
 
-
-
-
-# building client 
-include_directories(${YARP_INCLUDE_DIRS})
+# building client
 add_executable(producer ${CMAKE_SOURCE_DIR}/src/producer.cpp)
 target_link_libraries(producer ${YARP_LIBRARIES})
 install(TARGETS producer DESTINATION bin)
 
 # building server
-include_directories(${YARP_INCLUDE_DIRS})
 add_executable(consumer ${CMAKE_SOURCE_DIR/}src/consumer.cpp)
 target_link_libraries(consumer ${YARP_LIBRARIES})
 install(TARGETS consumer DESTINATION bin)
@@ -43,4 +36,3 @@ icubcontrib_add_uninstall_target()
 
 file(GLOB scripts ${CMAKE_SOURCE_DIR}/app/scripts/*.xml)
 yarp_install(FILES ${scripts} DESTINATION ${ICUBCONTRIB_APPLICATIONS_INSTALL_DIR})
-
